--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                  <i class="fa-solid fa-bars" onclick="openmenu()"></i>
              </nav>
              <div class="header-text">
-                 <p>GIS Developer | Spatial Analyst | Writer</p>
+                 <p>GIS Developer | Spatial Analyst | Content Writer</p>
                  <h1>I'm Mohammad <span>Rizal</span> Ardiansyah</h1>
                  <h2>This is my portfolio website to show details about me and my project</h2>
                  <a href="" download class="btn btn2">Download CV</a>
