--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>SMAN 1 Genteng</span><br>Major in Social Science<br>2016 - 2019</li>
-                            <li><span>Universitas Negeri Semarang</span><br>Bachelor's Degree in Geography<br>2019 - 2023<br>GPA 3.63/4.00</li>
+                            <li><span>Universitas Negeri Semarang</span><br>Major in Geography<br>2019 - 2023<br>GPA 3.63/4.00</li>
                         </ul>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                 <div class="layer">
                     <h3>Writing</h3>
                     <p>A collection of writings that I have made while joining Kabarbuana.com</p>
-                    <a href="https://www.kabarbuana.com/author/19193/Mohammad-Rizal-Ardiansyah" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://drive.google.com/file/d/16afICkGzLhnEThyk-8CnHwx9ZwmDVrZx/view?usp=drive_link" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
