--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
                             </li>
                             <li><span>CV Citarasa Rempah Indonesia (REINA)</span><br><b>Internship as Admin and Web Optimize</b><br><i>July 2022 - October 2022</i>
                                 <ol>
-                                    <li>Manage and maintain the company website</li>
-                                    <li>Optimizing the appearance and performance of the company website</li>
-                                    <li>Optimizing SEO on the company website</li>
+                                    <li>Manage and maintain the company's website</li>
+                                    <li>Optimizing the appearance and performance of the company's website</li>
+                                    <li>Editing articles for the company's website</li>
+                                    <li>Optimizing SEO on the company's website</li>
                                 </ol>
                             </li>
                             <li><span>Badan Pusat Statistik (BPS)</span><br><b>Field Data Officer on Social and Economic Registration</b><br><i>October 2022 - November 2022</i>
@@ -83,6 +84,7 @@
                             <li><span>Kabarbuana.com</span><br><b>Editorial Secretary and Content Writer</b><br><i>Desember 2022 - June 2023</i>
                                 <ol>
                                     <li>Write articles</li>
+                                    <li>Research keyword for daily content</li>
                                     <li>Create content writer productivity reports</li>
                                     <li>Managing advertising and social media</li>
                                 </ol>
