--- a/index.html
+++ b/index.html
@@ -59,19 +59,21 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Ditjen Tata Ruang, Kementerian ATR/BPN</span><br><b>Internship In Spatial Planning for Regional and National Growth (INSPIRING)</b><br><i>February 2022 - July 2022</i>
-                            <ol>
-                                <li>Manage the database of Spatial Planning and Regional Planning Map</li>
-                                <li>Adjusting the plan book and analyst fact book with the new rules</li>
-                                <li>Collecting supporting data in the preparation of Spatial Planning and Regional Planning</li>
-                            </ol>
-                            </li>
-                            <li><span>CV Citarasa Rempah Indonesia (REINA)</span><br><b>Internship as Admin and Web Optimize</b><br><i>July 2022 - October 2022</i>
+                            <li><span>Almuhtada.org</span><br><b>Editor in Chief</b><br><i>October 2023 - Present</i>
                                 <ol>
-                                    <li>Manage and maintain the company's website</li>
-                                    <li>Optimizing the appearance and performance of the company's website</li>
-                                    <li>Editing articles for the company's website</li>
-                                    <li>Optimizing SEO on the company's website</li>
+                                    <li>Build a news website portal</li>
+                                    <li>Provide direction to content writers regarding the content to be published</li>
+                                    <li>Responsible for the quality of the content published</li>
+                                    <li>Determine whether or not the content to be loaded is appropriate</li>
+                                    <li>Establish cooperation with advertisers</li>
+                                </ol>
+                            </li>
+                            <li><span>Kabarbuana.com</span><br><b>Editorial Secretary and Content Writer</b><br><i>Desember 2022 - September 2023</i>
+                                <ol>
+                                    <li>Write articles</li>
+                                    <li>Research keyword for daily content</li>
+                                    <li>Create content writer productivity reports</li>
+                                    <li>Managing advertising and social media</li>
                                 </ol>
                             </li>
                             <li><span>Badan Pusat Statistik (BPS)</span><br><b>Field Data Officer on Social and Economic Registration</b><br><i>October 2022 - November 2022</i>
@@ -81,12 +83,19 @@
                                     <li>Recapitulate the results of field data collection</li>
                                 </ol>
                             </li>
-                            <li><span>Kabarbuana.com</span><br><b>Editorial Secretary and Content Writer</b><br><i>Desember 2022 - June 2023</i>
+                            <li><span>CV Citarasa Rempah Indonesia (REINA)</span><br><b>Internship as Admin and Web Optimize</b><br><i>July 2022 - October 2022</i>
                                 <ol>
-                                    <li>Write articles</li>
-                                    <li>Research keyword for daily content</li>
-                                    <li>Create content writer productivity reports</li>
-                                    <li>Managing advertising and social media</li>
+                                    <li>Manage and maintain the company's website</li>
+                                    <li>Optimizing the appearance and performance of the company's website</li>
+                                    <li>Editing articles for the company's website</li>
+                                    <li>Optimizing SEO on the company's website</li>
+                                </ol>
+                            </li>
+                            <li><span>Ditjen Tata Ruang, Kementerian ATR/BPN</span><br><b>Internship In Spatial Planning for Regional and National Growth (INSPIRING)</b><br><i>February 2022 - July 2022</i>
+                                <ol>
+                                    <li>Manage the database of Spatial Planning and Regional Planning Map</li>
+                                    <li>Adjusting the plan book and analyst fact book with the new rules</li>
+                                    <li>Collecting supporting data in the preparation of Spatial Planning and Regional Planning</li>
                                 </ol>
                             </li>
                         </ul>
