--- a/Maps.html
+++ b/Maps.html
@@ -177,6 +177,42 @@
         <div class="container webgis">
             <div class="row">
                 <div class="about-col-1">
+                    <img src="img/Kerapatan_Vegetasi_Desa_Bedono.png" alt="">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">Bedono Village Location Map</h1>
+                    <p>This map depicts the percentage of species of vegetation or plants that live at the planting location in Bedono Village, Demak Regency, Central Java. This map was created using the Normalized Difference Vegetation Index (NDVI) method. The data used is Planet Scope imagery for 2023. This map was created in 2023, when I was doing an internship at "Lindungi Hutan".</p>
+                    <a href="img/Peta_Rawan_Banjir.png" target="_blank" class="btn">View Map</a>
+                </div>
+            </div>
+        </div>
+        <div class="container webgis">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="img/Tutupan_Lahan_Desa_Bedono.png" alt="">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">Bedono Village Land Cover Map</h1>
+                    <p>This map illustrates the classification of land cover at planting locations in Bedono Village, Demak Regency, Central Java. Based on this map, the land cover at the planting location in Bedono Village consists of rice fields and ponds. This map was created based on the land cover map of the Indonesian Ministry of Environment and Forestry (KLHK) and field analysis data from the "Lindungi Hutan" team. This map was created in 2023, when I was doing an internship at "Lindungi Hutan".</p>
+                    <a href="img/Peta_Rawan_Banjir.png" target="_blank" class="btn">View Map</a>
+                </div>
+            </div>
+        </div>
+        <div class="container webgis">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="img/Lokasi_Desa_Bedono.png" alt="">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">Bedono Village Location Map</h1>
+                    <p>This map depicts the location of Bedono Village, which is located in Sayung District, Demak Regency, Central Java. This map was created in 2023, when I was doing an internship at "Lindungi Hutan".</p>
+                    <a href="img/Peta_Rawan_Banjir.png" target="_blank" class="btn">View Map</a>
+                </div>
+            </div>
+        </div>
+        <div class="container webgis">
+            <div class="row">
+                <div class="about-col-1">
                     <img src="img/Peta_Rawan_Banjir.png" alt="">
                 </div>
                 <div class="about-col-2">
@@ -198,7 +234,7 @@
                     <h1 class="sub-title">Population Density of Banyuwangi Regency on 2022</h1>
                     <p>The Banyuwangi district population density map shows the number 
                         of inhabitants per unit area. It shows the number of inhabitants per square 
-                        kilometer of area. Population density is calculated for each district. 
+                        kilometer of area. Population density is calculated for each district.
                         Population density mapping serves to determine the level of population 
                         distribution.</p>
                     <a href="img/Population_Density_Map.png" target="_blank" class="btn">View Map</a>
