--- a/Maps.html
+++ b/Maps.html
@@ -182,7 +182,7 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">Bedono Village Location Map</h1>
                     <p>This map depicts the percentage of species of vegetation or plants that live at the planting location in Bedono Village, Demak Regency, Central Java. This map was created using the Normalized Difference Vegetation Index (NDVI) method. The data used is Planet Scope imagery for 2023. This map was created in 2023, when I was doing an internship at "Lindungi Hutan".</p>
-                    <a href="img/Peta_Rawan_Banjir.png" target="_blank" class="btn">View Map</a>
+                    <a href="img/Kerapatan_Vegetasi_Desa_Bedono.png" target="_blank" class="btn">View Map</a>
                 </div>
             </div>
         </div>
@@ -194,7 +194,7 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">Bedono Village Land Cover Map</h1>
                     <p>This map illustrates the classification of land cover at planting locations in Bedono Village, Demak Regency, Central Java. Based on this map, the land cover at the planting location in Bedono Village consists of rice fields and ponds. This map was created based on the land cover map of the Indonesian Ministry of Environment and Forestry (KLHK) and field analysis data from the "Lindungi Hutan" team. This map was created in 2023, when I was doing an internship at "Lindungi Hutan".</p>
-                    <a href="img/Peta_Rawan_Banjir.png" target="_blank" class="btn">View Map</a>
+                    <a href="img/Tutupan_Lahan_Desa_Bedono.png" target="_blank" class="btn">View Map</a>
                 </div>
             </div>
         </div>
@@ -206,7 +206,7 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">Bedono Village Location Map</h1>
                     <p>This map depicts the location of Bedono Village, which is located in Sayung District, Demak Regency, Central Java. This map was created in 2023, when I was doing an internship at "Lindungi Hutan".</p>
-                    <a href="img/Peta_Rawan_Banjir.png" target="_blank" class="btn">View Map</a>
+                    <a href="img/Lokasi_Desa_Bedono.png" target="_blank" class="btn">View Map</a>
                 </div>
             </div>
         </div>
