--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                  <p>GIS Developer | Spatial Analyst | Content Writer</p>
                  <h1>I'm Mohammad <span>Rizal</span> Ardiansyah</h1>
                  <h2>This is my portfolio website to show details about me and my project</h2>
-                 <a href="Documents/Mohammad_Rizal_A_CV.pdf" download class="btn btn2">Download CV</a>
+                 <a href="document/CV_Mohammad Rizal Ardiansyah.pdf" download class="btn btn2">Download CV</a>
              </div>
          </div>
     </div>
