--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                  <h2>This is my portfolio website to show details about me and my project</h2>
                  <a href="document/CV_Mohammad Rizal Ardiansyah.pdf" download class="btn btn2">Download CV</a>
              </div>
+             <div class="header-img">
+                 <div class="circle-img"></div>
+             </div>
          </div>
     </div>
 <!------------About----------->
