--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Mapping</span><br>Create map and data visualization using GIS software (ArcGIS, QGIS, Global Mapper)</li>
-                            <li><span>Spatial Analysis</span><br>Analyze spatial and non-spatial data (ArcGIS, QGIS, Envi, Microsoft Excel, Tableau)</li>
-                            <li><span>WebGIS Development</span><br>Develop WebGIS (HTML, CSS, Javascript)</li>
+                            <li><span>GIS Software </span><br>ArcGIS, QGIS, ENVI, and Google Earth Engine</li>
+                            <li><span>WeGIS Development</span><br>Leaflet and Open Layers</li>
+                            <li><span>Database</span><br>Geoserver and PostgeSQL/PostGIS</li>
+                            <li><span>Microsoft Office</span><br>Word, Excel, and PowerPoint</li>
+                            <li><span>Web Development</span><br>Html, CSS, and JavaScript</li>
                             <li><span>Writing</span><br>Write an article and SEO optimization</li>
+                            <li><span>Graphic Design Software</span><br>Canva and Corel Draw</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
