--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          </div>
          <section class="home">
             <div class="header-text">
-                <p>GIS Developer | Spatial Analyst | Content Writer</p>
+                <p>GIS Developer | Content Writer</p>
                 <h1>I'm Mohammad <span>Rizal</span> Ardiansyah</h1>
                 <h2>This is my portfolio website to show details about me and my project</h2>
                 <a href="document/CV_Mohammad Rizal Ardiansyah.pdf" download class="btn btn2">Download CV</a>
