--- a/webgis.html
+++ b/webgis.html
@@ -177,6 +177,20 @@
         <div class="container webgis">
             <div class="row">
                 <div class="about-col-1">
+                    <img src="img/East-Java-Map.png" alt="">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">East Java Maps</h1>
+                    <p>The East Java Map is a WebGIS that displays administrative data from the East Java province area. 
+                        The data contained in it are the capital, coordinates, area, population, and GDP per capita of each district, 
+                        as well as data at the sub-district level.</p>
+                    <a href="https://mohammadrizala.github.io/East-Java-Maps/" target="_blank" class="btn">View WebGIS</a>
+                </div>
+            </div>
+        </div>
+        <div class="container webgis">
+            <div class="row">
+                <div class="about-col-1">
                     <img src="img/Webgis.jpg" alt="">
                 </div>
                 <div class="about-col-2">
