--- a/Maps.html
+++ b/Maps.html
@@ -180,7 +180,7 @@
                     <img src="img/Kerapatan_Vegetasi_Desa_Bedono.png" alt="">
                 </div>
                 <div class="about-col-2">
-                    <h1 class="sub-title">Bedono Village Location Map</h1>
+                    <h1 class="sub-title">Bedono Village Vegetation Density Map</h1>
                     <p>This map depicts the percentage of species of vegetation or plants that live at the planting location in Bedono Village, Demak Regency, Central Java. This map was created using the Normalized Difference Vegetation Index (NDVI) method. The data used is Planet Scope imagery for 2023. This map was created in 2023, when I was doing an internship at "Lindungi Hutan".</p>
                     <a href="img/Kerapatan_Vegetasi_Desa_Bedono.png" target="_blank" class="btn">View Map</a>
                 </div>
