--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Almuhtada.org</span><br><b>Editor in Chief</b><br><i>October 2023 - Present</i>
+<!--                             <li><span>Almuhtada.org</span><br><b>Editor in Chief</b><br><i>October 2023 - Present</i>
                                 <ol>
                                     <li>Build a news website portal</li>
                                     <li>Provide direction to content writers regarding the content to be published</li>
@@ -81,7 +81,7 @@
                                     <li>Determine whether or not the content to be loaded is appropriate</li>
                                     <li>Establish cooperation with advertisers</li>
                                 </ol>
-                            </li>
+                            </li> -->
                             <li><span>Kabarbuana.com</span><br><b>Editorial Secretary and Content Writer</b><br><i>Desember 2022 - September 2023</i>
                                 <ol>
                                     <li>Write articles</li>
