--- a/webgis.html
+++ b/webgis.html
@@ -177,6 +177,19 @@
         <div class="container webgis">
             <div class="row">
                 <div class="about-col-1">
+                    <img src="img/WebGIS4.png" alt="">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">WebGIS Universities in Semarang City</h1>
+                    <p>WebGIS Universities in Semarang City displays a list of universities in Semarang City. 
+                        It contains the location, address, website and photos of each university.</p>
+                    <a href="https://mohammadrizala.github.io/WebGIS-Universities-in-Semarang-City/" target="_blank" class="btn">View WebGIS</a>
+                </div>
+            </div>
+        </div>
+        <div class="container webgis">
+            <div class="row">
+                <div class="about-col-1">
                     <img src="img/East-Java-Map.png" alt="">
                 </div>
                 <div class="about-col-2">
