--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          </div>
          <section class="home">
             <div class="header-text">
-                <p>GIS Developer | Content Writer</p>
+                <p>GIS Enthusiast | WebGIS Developer | Content Writer</p>
                 <h1>I'm Mohammad <span>Rizal</span> Ardiansyah</h1>
                 <h2>This is my portfolio website to show details about me and my project</h2>
                 <a href="document/CV_Mohammad Rizal Ardiansyah.pdf" download class="btn btn2">Download CV</a>
@@ -50,10 +50,11 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Final-year Geography Student with an interest in research, writing, surveying, and mapping. 
-                        I have participated in several internships and worked in terms of spatial data processing, 
-                        data collection, website management, media management, and content writing. Likes to learn new things, 
-                        think critically, and be proficient in problem solving.</p>
+                    <p>I am a fresh graduate of the Geography major with knowledge and skills in Geographic Information System (GIS) 
+                        and data management. My experience includes internships and jobs in various fields, including spatial data processing, 
+                        website management, media management, and content writing. I am known as an individual who loves to learn new things, 
+                        think critically, and is always ready to face challenges. With high enthusiasm and dedication, 
+                        I am ready to contribute and grow in a dynamic work environment.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -82,7 +83,7 @@
                                     <li>Establish cooperation with advertisers</li>
                                 </ol>
                             </li> -->
-                            <li><span>Kabarbuana.com</span><br><b>Editorial Secretary and Content Writer</b><br><i>Desember 2022 - September 2023</i>
+                            <li><span>Kabarbuana.com</span><br><b>Editorial Secretary and Content Writer</b><br><i>Desember 2022 - June 2024</i>
                                 <ol>
                                     <li>Write articles</li>
                                     <li>Research keyword for daily content</li>
@@ -105,9 +106,10 @@
                                     <li>Optimizing SEO on the company's website</li>
                                 </ol>
                             </li>
-                            <li><span>Ditjen Tata Ruang, Kementerian ATR/BPN</span><br><b>Internship In Spatial Planning for Regional and National Growth (INSPIRING)</b><br><i>February 2022 - July 2022</i>
+                            <li><span>Ditjen Tata Ruang, Kementerian ATR/BPN</span><br><b>Internship as a Spatial Planning Team</b><br><i>February 2022 - July 2022</i>
                                 <ol>
                                     <li>Manage the database of Spatial Planning and Regional Planning Map</li>
+                                    <li>Editing Spatial and Regional Planning Maps</li>
                                     <li>Adjusting the plan book and analyst fact book with the new rules</li>
                                     <li>Collecting supporting data in the preparation of Spatial Planning and Regional Planning</li>
                                 </ol>
@@ -117,7 +119,7 @@
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>SMAN 1 Genteng</span><br>Major in Social Science<br>2016 - 2019</li>
-                            <li><span>Universitas Negeri Semarang</span><br>Major in Geography<br>2019 - 2023<br>GPA 3.63/4.00</li>
+                            <li><span>Universitas Negeri Semarang</span><br>Major in Geography<br>2019 - 2024<br>GPA 3.63/4.00</li>
                         </ul>
                     </div>
                 </div>
