--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 <img src="img/Writing.jpg">
                 <div class="layer">
                     <h3>Writing</h3>
-                    <p>A collection of writings that I have made while joining Kabarbuana.com</p>
-                    <a href="https://drive.google.com/file/d/1ofiJkwtATRPvJr-XfOS1l3piY_BkY25c/view?usp=drive_link" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <p>This is my writing portfolio</p>
+                    <a href="https://drive.google.com/file/d/1NdRITwGjbJDd4Uzcjkh7HbO7wdtAdBCM/view?usp=drive_link" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
