--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-<!--                             <li><span>Almuhtada.org</span><br><b>Editor in Chief</b><br><i>October 2023 - Present</i>
+                            <li><span>Almuhtada.org</span><br><b>Editor in Chief</b><br><i>October 2023 - Present</i>
                                 <ol>
                                     <li>Build a news website portal</li>
+                                    <li>Writing articles</li>
                                     <li>Provide direction to content writers regarding the content to be published</li>
                                     <li>Responsible for the quality of the content published</li>
                                     <li>Determine whether or not the content to be loaded is appropriate</li>
-                                    <li>Establish cooperation with advertisers</li>
                                 </ol>
-                            </li> -->
-                            <li><span>Kabarbuana.com</span><br><b>Editorial Secretary and Content Writer</b><br><i>Desember 2022 - June 2024</i>
+                            </li>
+                            <li><span>Kabarbuana.com</span><br><b>Editorial Secretary and Content Writer</b><br><i>Desember 2022 - July 2024</i>
                                 <ol>
-                                    <li>Write articles</li>
+                                    <li>Writing articles</li>
                                     <li>Research keyword for daily content</li>
-                                    <li>Create content writer productivity reports</li>
+                                    <li>Create employee productivity reports</li>
                                     <li>Managing advertising and social media</li>
                                 </ol>
                             </li>
